--- a/_config.yml
+++ b/_config.yml
@@ -1,31 +1,31 @@
 # Site settings
-name: John Smith
-description: "Nifty little description"
+name: Faris Chebib
+description: "A happy-go-lucky cognitive science hacker and pilot. CTO of Zaniac"
 url: ""
 
 
 # Delete the lines you don't need
 # about 5 elements are recomended
-github_username:  dashingcode
-codepen_username: your_codepen_username_goes_here
-facebook_username: your_facebook_username_goes_here
-vk_username: your_vk_username_goes_here
-twitter_username: your_twitter_username_goes_here
-google_plus_username: your_google_plus_username_goes_here
-linked_in_username: your_linked_in_username_goes_here
-vine_username:  your_vine_username_goes_here
-instagram_username:  your_instagram_username_goes_here
-flickr_username: your_flickr_username_goes_here
-steam_username: your_steam_username_goes_here
-soundcloud_username:  your_soundcloud_username_goes_here
-stack_of_username: your_stack_overflow_account_id_number_goes_here
-reddit_username: your_reddit_username_goes_here
-medium_username:  your_medium_username_goes_here
-tumblr_username: your_tumblr_username_goes_here
-weibo_username: your_weibo_username_goes_here
-blog_url: "/blog"
-email: your-email@example.domain
-public_key_url: "https://raw.pastebin.com/LINK-TO-PUBLIC-KEY"
+github_username:  octaflop
+#codepen_username: your_codepen_username_goes_here
+#facebook_username: your_facebook_username_goes_here
+#vk_username: your_vk_username_goes_here
+twitter_username: siraf
+google_plus_username: FarisChebib
+#linked_in_username: your_linked_in_username_goes_here
+vine_username:  1068024005912674304
+instagram_username:  octaflop
+flickr_username: fyrefoenix
+steam_username: fyrefoenix
+#soundcloud_username:  your_soundcloud_username_goes_here
+stack_of_username: 10636
+reddit_username: siraf
+#medium_username:  your_medium_username_goes_here
+#tumblr_username: your_tumblr_username_goes_here
+#weibo_username: your_weibo_username_goes_here
+#blog_url: "/blog"
+email: faris@theluckybead.com
+public_key_url: "https://github.com/octaflop.keys"
 
 
 avatar: yes
