--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-name: Faris Chebib
-description: "A happy-go-lucky cognitive science hacker and pilot. CTO of Zaniac"
+name: faris chebib
+description: "a happy-go-lucky cognitive science hacker and pilot <br/> cto of zaniac"
 url: ""
 
 
@@ -32,7 +32,7 @@ avatar: yes
 #avatar_img_path: "imgs/avatar.jpg""
 # You can link to your GitHub image. That way it will get updated 
 # automatically whenever you change your GitHub profile picture
-avatar_img_path: "https://avatars2.githubusercontent.com/u/17301305"
+avatar_img_path: "imgs/profile.jpg"
 
 
 front_img: yes
