--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 # Site settings
+title: farischebib.is
 name: faris chebib
 description: "a happy-go-lucky cognitive science hacker and pilot <br/> cto of zaniac"
 url: ""
