--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ reddit_username: siraf
 #weibo_username: your_weibo_username_goes_here
 #blog_url: "/blog"
 email: faris@theluckybead.com
-public_key_url: "https://github.com/octaflop.keys"
+public_key_url: "https://keybase.io/faris"
 
 
 avatar: yes
