--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ google_plus_username: FarisChebib
 vine_username:  1068024005912674304
 instagram_username:  octaflop
 flickr_username: fyrefoenix
-steam_username: fyrefoenix
+#steam_username: fyrefoenix
 #soundcloud_username:  your_soundcloud_username_goes_here
 stack_of_username: 10636
 reddit_username: siraf
