updated hacking blog

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ reddit_username: siraf
 #medium_username:  your_medium_username_goes_here
 #tumblr_username: your_tumblr_username_goes_here
 #weibo_username: your_weibo_username_goes_here
-#blog_url: "/blog"
+hacking_blog_url: "/hacking"
 email: faris@theluckybead.com
 public_key_url: "https://keybase.io/faris"
 
