--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@
 title: farischebib.is
 name: faris chebib
 description: "a happy-go-lucky cognitive science hacker and pilot <br/> cto of zaniac"
-url: ""
+url: "https://farischebib.is"
+baseurl: "/"
 
 
 # Delete the lines you don't need
@@ -31,7 +32,7 @@ public_key_url: "https://keybase.io/faris"
 
 avatar: yes
 #avatar_img_path: "imgs/avatar.jpg""
-# You can link to your GitHub image. That way it will get updated 
+# You can link to your GitHub image. That way it will get updated
 # automatically whenever you change your GitHub profile picture
 avatar_img_path: "imgs/profile.jpg"
 
