--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: farischebib.is
 name: faris chebib
-description: "a happy-go-lucky cognitive science hacker and pilot <br/> cto of zaniac"
+description: "a happy-go-lucky cognitive science hacker and pilot <br/> senior backend engineer at <a href='teem.com'>teem</a>"
 url: "https://farischebib.is"
 baseurl: ""
 
