--- a/_config.yml
+++ b/_config.yml
@@ -6,19 +6,17 @@ url: "https://farischebib.is"
 baseurl: ""
 
 
-# Delete the lines you don't need
-# about 5 elements are recomended
 github_username:  octaflop
 #codepen_username: your_codepen_username_goes_here
 #facebook_username: your_facebook_username_goes_here
 #vk_username: your_vk_username_goes_here
 twitter_username: siraf
 google_plus_username: FarisChebib
-#linked_in_username: your_linked_in_username_goes_here
-vine_username:  1068024005912674304
+linked_in_username: farisc
+#vine_username:  1068024005912674304
 instagram_username:  octaflop
 flickr_username: fyrefoenix
-#steam_username: fyrefoenix
+steam_username: fyrefoenix
 #soundcloud_username:  your_soundcloud_username_goes_here
 stack_of_username: 10636
 reddit_username: siraf
