--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ github_username:  octaflop
 twitter_username: siraf
 google_plus_username: FarisChebib
 linked_in_username: farisc
-#vine_username:  1068024005912674304
+#vine_username:  1068024005912674304 # RIP
 instagram_username:  octaflop
 flickr_username: fyrefoenix
 steam_username: fyrefoenix
