--- a/_config.yml
+++ b/_config.yml
@@ -61,6 +61,6 @@ paginate_path: "/all/page:num/"
 # Build settings
 markdown: kramdown
 permalink: /:categories/:title
-gems:
+plugins:
   - jemoji
   - jekyll-paginate
