--- a/scripts/webify/pyproject.toml
+++ b/scripts/webify/pyproject.toml
@@ -13,6 +13,7 @@ aioboto3 = "^11.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.0"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
