--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,7 +68,7 @@ jobs:
       name: github-pages
       url: $
     runs-on: ubuntu-latest
-    needs: build
+    needs: build_jekyll
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
